--- a/app/main/views/nation_continent/nation_continent.html
+++ b/app/main/views/nation_continent/nation_continent.html
@@ -164,7 +164,7 @@
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_nation"><span aria-hidden="true">×</span>
                                 </button>
-                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa quốc gia này</h4>
+                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa quốc gia này?</h4>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
@@ -179,11 +179,11 @@
                             <div class="modal-header">
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="close_modal_delete_continent"><span aria-hidden="true">×</span>
                                 </button>
-                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa quốc gia này</h4>
+                                <h4 class="modal-title" id="myModalLabel2">Bạn có chắc muốn xóa châu lục này?</h4>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-default" data-dismiss="modal">Hủy</button>
-                                <button type="button" class="btn btn-primary" ng-click="deletePartner(comfirmDeleteId)">Xóa</button>
+                                <button type="button" class="btn btn-primary" ng-click="deleteContinent(comfirmDeleteId)">Xóa</button>
                             </div>
                         </div>
                     </div>
