--- a/app/main/views/partner/partner.all.html
+++ b/app/main/views/partner/partner.all.html
@@ -242,25 +242,25 @@
                     <div class="form-group">
                         <label class="control-label col-md-4 col-sm-3 col-xs-12">Email: </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.email" required />
+                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.email" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-4 col-sm-3 col-xs-12">Phone: </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.phone" required />
+                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.phone" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-4 col-sm-3 col-xs-12">Chức vụ: </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.about" required />
+                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.about" />
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-md-4 col-sm-3 col-xs-12">Skype: </label>
                         <div class="col-md-6 col-sm-6 col-xs-12">
-                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.skype" required />
+                            <input type="text" name="country" id="autocomplete-custom-append" class="form-control col-md-10" ng-model="input.partnerContact.skype" />
                         </div>
                     </div>
                     <div class="form-group">
