--- a/app/main/views/vnu/vnu.html
+++ b/app/main/views/vnu/vnu.html
@@ -23,11 +23,13 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle cursor" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
                         <ul class="dropdown-menu" role="menu">
-                            <li><a data-toggle="collapse" data-target="#add_unit" class="cursor"> Thêm đơn vị theo dõi </a>
+                            <li ng-if="role == 'ADMIN'"><a data-toggle="collapse" data-target="#add_unit" class="cursor"> Thêm đơn vị theo dõi </a>
                             </li>
                             <li><a data-toggle="collapse" data-target="#add_uet_man" class="cursor"> Thêm người kí kết (VNU-UET) </a>
                             </li>
                             <li><a data-toggle="collapse" data-target="#add_type_contract" class="cursor"> Thêm loại hợp đồng </a>
+                            </li>
+                            <li ng-if="role == 'ADMIN'"><a data-toggle="collapse" data-target="#create_account" class="cursor"> Tạo tài khoản cho đơn vị theo dõi </a>
                             </li>
                         </ul>
                     </li>
@@ -41,6 +43,42 @@
                 <div class="alert alert-danger" ng-if="danger">
                     <strong>{{errorMessage}}</strong>
                 </div>
+                <!-- form tao tk cho don vi theo doi -->
+                <form class="form-horizontal form-label-left collapse" id="create_account">
+                    <ul class="nav navbar-right panel_toolbox">
+                        <li><a data-toggle="collapse" data-target="#create_account" class="cursor"><i class="fa fa-chevron-up"></i></a>
+                        </li>
+                    </ul>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Đơn vị theo dõi: </label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <select class="form-control" ng-model="input.unitNameId">
+                                <option ng-repeat="unit in allUnit" value="{{unit.id}}" ng-if="unit.user == null">
+                                    {{unit.unitName}}
+                                </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Tên đăng nhập:</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="text" name="country" class="form-control col-md-10" ng-model="input.userName" required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label col-md-3 col-sm-3 col-xs-12">Mật khẩu:</label>
+                        <div class="col-md-6 col-sm-6 col-xs-12">
+                            <input type="password" name="country" class="form-control col-md-10" ng-model="input.password" required />
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
+                            <button type="submit" class="btn btn-success" ng-click="createAccount()">Tạo</button>
+                        </div>
+                    </div>
+                    <div class="divider-dashed"></div>
+                </form>
+                <!-- end form tao tk cho don vi theo doi -->
                 <!-- form tao unit -->
                 <form class="form-horizontal form-label-left collapse" id="add_unit">
                     <ul class="nav navbar-right panel_toolbox">
@@ -107,8 +145,7 @@
                             <h2>Các loại hợp đồng</h2>
                             <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="type_contract"
-                                        style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
+                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="type_contract" style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
                                 </div>
                             </div>
                             <div class="clearfix"></div>
@@ -149,8 +186,7 @@
                             <h2>Người kí kết (VNU-UET)</h2>
                             <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="uet_man"
-                                        style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
+                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="uet_man" style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
                                 </div>
                             </div>
                             <div class="clearfix"></div>
@@ -186,15 +222,14 @@
                     </div>
                 </div>
             </div>
-            <div class="x_content">
+            <div class="x_content" ng-if="role == 'ADMIN'">
                 <div class="col-md-6 col-sm-6 col-xs-12" ng-init="getAllUnitName()">
                     <div class="x_panel">
                         <div class="x_title">
                             <h2>Đơn vị theo dõi</h2>
                             <div class="col-md-5 col-sm-5 col-xs-12 form-group pull-right top_search">
                                 <div class="input-group">
-                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="all_unit"
-                                        style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
+                                    <input type="text" class="form-control" placeholder="Search for..." ng-model="all_unit" style="border-radius:25px; border: 1px solid rgba(221,226,232,.49); box-shadow: inset 0 1px 0 rgba(0,0,0,.075)">
                                 </div>
                             </div>
                             <div class="clearfix"></div>
